# FBA-bench

./: .env.example  .gitignore  .pre-commit-config.yaml  Benchmark Philosophy.md  CHANGELOG.md  CONTRIBUTING.md  CRITICAL_BUG_FIXES_SUMMARY.md  CRITICAL_FIXES_SUMMARY.md  DASHBOARD_README.md  Dockerfile  FRONTEND_ANALYSIS_REPORT.md  FRONTEND_ISSUES_AND_FIXES.md  Key-Issues-and-Proposed-Changes-Ver.txt  LICENSE  Makefile  README.md  REFACTORING_PLAN.md  RELEASE_NOTES.md  TESTING_FRAMEWORK_README.md  alembic.ini  alert_system.py  analysis_example.ipynb  api_server.py  api_server_minimal.py  audit.py  benchmark_gemini_flash.yaml  command_processor.py  conftest.py  curriculum_system_design.md  dashboard_api_service.py  dashboard_architecture_plan.md  dashboard_example.py  debug_critical_bugs.py  debug_fees.py  debug_total_fees.py  docker-compose-otel-collector.yml  docker-compose.yml  error_handler.py  event_bus.py  events.py  (+42 more)
agent_runners/: README.md  __init__.py  agent_manager.py  base_runner.py  compat.py  crewai_runner.py  dependency_manager.py  diy_runner.py  langchain_runner.py  registry.py  runner_factory.py  simulation_runner.py  unified_runner_factory.py
agents/: advanced_agent.py  cognitive_config.py  hierarchical_planner.py  multi_domain_controller.py  skill_config.py  skill_coordinator.py
alembic/: env.py  script.py.mako
api/: dependencies.py
baseline_bots/: bot_factory.py  claude_sonnet_bot.py  gpt_3_5_bot.py  gpt_4o_mini_bot.py  greedy_script_bot.py  grok_4_bot.py
benchmarking/: __init__.py
community/: __init__.py  contribution_tools.py  contribution_tools_production.py
config/: fba_bench_config.yaml
constraints/: agent_gateway.py  budget_enforcer.py  constraint_config.py  token_counter.py
context-code/: FBA Simulation Roadmap Outline_.txt
dashboard/: __init__.py  api.py  data_exporter.py  models.py  secure_api.py
docs/: API.md  CONFIGURATION.md  DEVELOPER_GUIDE.md  IMPLEMENTED_FEATURES.md  LLM_contract.md  QUICKSTART.md  README.md  Sprint1_plan.md  TROUBLESHOOTING.md  ci-cd.md  performance-testing.md  red_team_framework.md  security-and-auth.md  smoke-tests.md
examples/: learning_example.py  real_world_integration_example.py
fba_bench/: __init__.py  advanced_agent.py  adversarial_events.py  amazon_sandbox_integration.py  audit.py  baseline_agent.py  config.py  config_loader.py  config_models.py  evaluation.py  fee_config.json  fee_engine.py  inventory.py  ledger.py  ledger_utils.py  market_dynamics.py  money.py  simulation.py  supply_chain.py
fba_bench_api/: main.py
fba_events/: README.md  __init__.py  adversarial.py  agent.py  base.py  budget.py  bus.py  compat.py  competitor.py  customer.py  ethics.py  inventory.py  marketing.py  pricing.py  registry.py  reporting.py  sales.py  skills.py  supplier.py  time_events.py
frontend/: .env.example  .env.production.example  .env.staging.example  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
infrastructure/: __init__.py  deployment.py  distributed_coordinator.py  distributed_event_bus.py  fast_forward_engine.py  llm_batcher.py  performance_monitor.py  resource_manager.py  scalability_config.py
instrumentation/: agent_tracer.py  export_utils.py  simulation_tracer.py  tracer.py
integration/: README.md  __init__.py  api_bridge.py  consistency_checker.py  gradual_rollout.py  integration_validator.py  real_world_adapter.py  risk_manager.py  safety_validator.py  sandbox_environment.py
integration_tests/: README.md  __init__.py  demo_scenarios.py  run_integration_tests.py  test_cross_system_integration.py  test_end_to_end_workflow.py  test_performance_benchmarks.py  test_scientific_reproducibility.py  test_simulation_loop.py  test_tier1_requirements.py  validation_report.py
leaderboard/: ci_integration.py  leaderboard_manager.py  leaderboard_renderer.py  score_tracker.py
learning/: README.md  __init__.py  curriculum_learning.py  episodic_learning.py  learning_config.py  meta_learning.py  reinforcement_learning.py  rl_environment.py
llm_interface/: __init__.py  config.py  contract.py  deterministic_client.py  generic_openai_client.py  openrouter_client.py  prompt_adapter.py  prompt_templates.py  response_parser.py  schema_validator.py
memory_experiments/: __init__.py  dual_memory_manager.py  experiment_protocols.py  experiment_runner.py  memory_config.py  memory_enforcer.py  memory_metrics.py  memory_modes.py  memory_validator.py  reflection_module.py  statistical_analyzer.py
metrics/: __init__.py  adversarial_metrics.py  cognitive_metrics.py  cost_metrics.py  finance_metrics.py  marketing_metrics.py  metric_suite.py  operations_metrics.py  stress_metrics.py  trust_metrics.py
models/: __init__.py  competitor.py  product.py  sales_result.py
observability/: alert_system.py  observability_config.py  trace_analyzer.py
plugins/: README.md  __init__.py  api_gateway.py  plugin_framework.py  plugin_interface.py  plugin_loader.py  plugin_validator.py
redteam/: __init__.py  adversarial_event_injector.py  demo_adversarial_testing.py  exploit_registry.py  gauntlet_runner.py  resistance_scorer.py
redteam_scripts/: README.md  exploit_template.yaml
reproducibility/: ci_integration.py  event_snapshots.py  golden_master.py  llm_cache.py  reproducibility_config.py  sim_seed.py  simulation_modes.py
scenarios/: README.md  curriculum_validator.py  dynamic_generator.py  multi_agent_coordinator.py  scenario_config.py  scenario_engine.py  scenario_framework.py  scenario_generator.py  tier_0_baseline.yaml  tier_1_moderate.yaml  tier_2_advanced.yaml  tier_3_expert.yaml  tier_manager.py
scripts/: cheap_llm_smoke_test.py  check_quality_gates.py  compare_benchmarks.py  db_migrate.py  docker-setup.bat  docker-setup.sh  generate_test_report.py  install.bat  install.sh  run_tests.py
services/: __init__.py  bsr_engine_v3.py  competitor_manager.py  customer_event_service.py  customer_reputation_service.py  dashboard_api_service.py  dispute_service.py  double_entry_ledger_service.py  external_service.py  fee_calculation_service.py  (+10 more)
(+576 files in other folders)
